--- a/website/index.html
+++ b/website/index.html
@@ -6,44 +6,35 @@
     <title>TSW Controller App</title>
     <link href="./style.css" rel="stylesheet" />
   </head>
-  <body class="bg-white dark:bg-gray-900">
+  <body>
     <div class="h-screen grid grid-rows-[max-content_minmax(0,1fr)]">
-      <header class="bg-white dark:bg-gray-900">
-        <div
-          class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
-        >
-          <div class="flex flex-1 items-center justify-end md:justify-between">
-            <nav>
-              <ul class="flex items-center gap-6 text-sm">
-                <li>
-                  <a
-                    class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                    href="/profile-builder/index.html"
-                  >
-                    Profile Builder
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+      <nav class="navbar bg-base-100 shadow-sm">
+        <div class="flex-1">
+          <ul class="menu menu-horizontal px-1">
+            <li><a class="link link-hover" href="/">Home</a></li>
+            <li><a class="link link-hover" href="/profile-builder/index.html">Profile Builder</a></li>
+          </ul>
         </div>
-      </header>
+      </nav>
 
-      <section class="bg-white h-full lg:grid lg:place-content-center dark:bg-gray-900">
-        <div class="mx-auto w-screen max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8 lg:py-32">
+      <section class="h-full lg:grid lg:place-content-center">
+        <div
+          class="mx-auto w-screen max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8 lg:py-32"
+        >
           <div class="mx-auto max-w-prose text-center">
-            <h1 class="text-4xl font-bold text-gray-900 sm:text-5xl dark:text-white">
+            <h1 class="font-title text-2xl md:text-3xl lg:text-4xl font-bold">
               TSW Controller App
             </h1>
 
-            <p class="mt-4 text-base text-pretty text-gray-700 sm:text-lg/relaxed dark:text-gray-200">
-              The best way to control Train Sim World with any controller or joystick.
+            <p class="mt-4 text-base text-pretty text-base-content/80">
+              The best way to control Train Sim World with any controller or
+              joystick.
             </p>
 
             <div class="mt-4 flex justify-center gap-4 sm:mt-6">
               <a
                 target="_blank"
-                class="inline-block rounded border border-indigo-600 bg-indigo-600 px-5 py-3 font-medium text-white shadow-sm transition-colors hover:bg-indigo-700"
+                class="btn btn-primary"
                 href="https://github.com/LiamMartens/tsw-controller-app/releases"
               >
                 Download now
@@ -51,7 +42,7 @@
 
               <a
                 target="_blank"
-                class="inline-block rounded border border-gray-200 px-5 py-3 font-medium text-gray-700 shadow-sm transition-colors hover:bg-gray-50 hover:text-gray-900 dark:border-gray-700 dark:text-gray-200 dark:hover:bg-gray-800 dark:hover:text-white"
+                class="btn btn-outline"
                 href="https://github.com/LiamMartens/tsw-controller-app"
               >
                 Learn More
