--- a/website/profile-builder/index.html
+++ b/website/profile-builder/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Builder</title>
-    <link
+    <link href="../style.css" rel="stylesheet" />
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
-    />
+    /> -->
   </head>
   <body>
+    <nav class="navbar bg-base-100 shadow-sm">
+      <div class="flex-1">
+        <ul class="menu menu-horizontal px-1">
+          <li><a class="link link-hover" href="/">Home</a></li>
+          <li><a class="link link-hover" href="/profile-builder/index.html">Profile Builder</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div id="editor"></div>
-    <script
+
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
     <script type="module">
       import schema from '../profile-builder-json-schema/profile.complete.schema.json'
@@ -32,7 +43,7 @@
       var editor = new JSONEditor(element, {
         schema,
         display_required_only: true,
-        theme: "bootstrap4",
+        theme: "barebones",
         startval: profile_data,
       });
     </script>
