--- a/website/profile-builder/index.html
+++ b/website/profile-builder/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Builder</title>
     <link href="../style.css" rel="stylesheet" />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    /> -->
   </head>
   <body>
     <nav class="navbar bg-base-100 shadow-sm">
@@ -49,6 +43,7 @@
       const editor = new JSONEditor(element, {
         schema,
         display_required_only: true,
+        keep_oneof_values: false,
         theme: "barebones",
         startval: profile_data,
       });
