feat: basic docs

--- a/website/profile-builder/index.html
+++ b/website/profile-builder/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Builder</title>
+    <title>TSW Controller App - Profile Builder</title>
     <link href="../style.css" rel="stylesheet" />
   </head>
   <body>
@@ -11,11 +11,8 @@
       <div class="flex-1">
         <ul class="menu menu-horizontal px-1">
           <li><a class="link link-hover" href="/">Home</a></li>
-          <li>
-            <a class="link link-hover" href="/profile-builder/index.html"
-              >Profile Builder</a
-            >
-          </li>
+          <li><a class="link link-hover" href="/profile-builder/index.html">Profile Builder</a></li>
+          <li><a class="link link-hover" href="/docs/index.html">Documentation</a></li>
         </ul>
       </div>
     </nav>
