--- a/website/index.html
+++ b/website/index.html
@@ -7,50 +7,49 @@
     <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="h-screen grid grid-rows-[max-content_minmax(0,1fr)]">
-      <nav class="navbar bg-base-100 shadow-sm">
-        <div class="flex-1">
-          <ul class="menu menu-horizontal px-1">
-            <li><a class="link link-hover" href="/">Home</a></li>
-            <li><a class="link link-hover" href="/profile-builder/index.html">Profile Builder</a></li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="navbar bg-base-100 shadow-sm">
+      <div class="flex-1">
+        <ul class="menu menu-horizontal px-1">
+          <li><a class="link link-hover" href="/">Home</a></li>
+          <li><a class="link link-hover" href="/profile-builder/index.html">Profile Builder</a></li>
+          <li><a class="link link-hover" href="/docs/index.html">Documentation</a></li>
+        </ul>
+      </div>
+    </nav>
 
-      <section class="h-full lg:grid lg:place-content-center">
-        <div
-          class="mx-auto w-screen max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8 lg:py-32"
-        >
-          <div class="mx-auto max-w-prose text-center">
-            <h1 class="font-title text-2xl md:text-3xl lg:text-4xl font-bold">
-              TSW Controller App
-            </h1>
+    <section class="h-full lg:grid lg:place-content-center">
+      <div
+        class="mx-auto w-screen max-w-screen-xl px-4 py-16 sm:px-6 sm:py-24 lg:px-8 lg:py-32"
+      >
+        <div class="mx-auto max-w-prose text-center">
+          <h1 class="font-title text-2xl md:text-3xl lg:text-4xl font-bold">
+            TSW Controller App
+          </h1>
 
-            <p class="mt-4 text-base text-pretty text-base-content/80">
-              The best way to control Train Sim World with any controller or
-              joystick.
-            </p>
+          <p class="mt-4 text-base text-pretty text-base-content/80">
+            The best way to control Train Sim World with any controller or
+            joystick.
+          </p>
 
-            <div class="mt-4 flex justify-center gap-4 sm:mt-6">
-              <a
-                target="_blank"
-                class="btn btn-primary"
-                href="https://github.com/LiamMartens/tsw-controller-app/releases"
-              >
-                Download now
-              </a>
+          <div class="mt-4 flex justify-center gap-4 sm:mt-6">
+            <a
+              target="_blank"
+              class="btn btn-primary"
+              href="https://github.com/LiamMartens/tsw-controller-app/releases"
+            >
+              Download now
+            </a>
 
-              <a
-                target="_blank"
-                class="btn btn-outline"
-                href="https://github.com/LiamMartens/tsw-controller-app"
-              >
-                Learn More
-              </a>
-            </div>
+            <a
+              target="_blank"
+              class="btn btn-outline"
+              href="https://github.com/LiamMartens/tsw-controller-app"
+            >
+              Learn More
+            </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
   </body>
 </html>
